ARROW-4088: [Python] Table.from_batches() fails when passed a schema with metadata

Author: Krisztián Szűcs <szucs.krisztian@gmail.com>

Closes #3256 from kszucs/ARROW-4088 and squashes the following commits:

b2698995 <Krisztián Szűcs> turn off check_metadata
cf5c0829 <Krisztián Szűcs> propagate check_metadata to Schema's fields